# aegis-core

./: FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  test_basic.py
.sam_state/: traces.jsonl
.sam_state/traces/: decisions.jsonl
examples/: golden_path.py  simple_demo.py
tests/: test_events.py  test_policy_self_governance.py  test_state_store.py  test_trace_logger.py
